MIK-89 Fix the issue with opened basked on mobile

--- a/src/views/BasketModalView/BasketModalView.module.css
+++ b/src/views/BasketModalView/BasketModalView.module.css
@@ -103,7 +103,6 @@
 @media (max-width: 650px) {
   .BasketModalView {
     width: 100vw;
-    height: 100vh;
   }
 
   .BasketModalView img {
